--- a/CSharpGame/CSharpGame.csproj
+++ b/CSharpGame/CSharpGame.csproj
@@ -47,8 +47,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Apple.cs" />
-    <Compile Include="BaseComponent.cs" />
+    <Compile Include="BaseObject.cs" />
     <Compile Include="Bullet.cs" />
+    <Compile Include="Enums.cs" />
     <Compile Include="Collisions.cs" />
     <Compile Include="GameSettings.cs" />
     <Compile Include="Inputs.cs" />
@@ -60,7 +61,9 @@
     <Compile Include="MainScreen.Designer.cs">
       <DependentUpon>MainScreen.cs</DependentUpon>
     </Compile>
+    <Compile Include="MapView.cs" />
     <Compile Include="Obstacle.cs" />
+    <Compile Include="PackmanController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tank.cs" />
