Added runtime coordinates displaying

--- a/CSharpGame/CSharpGame.csproj
+++ b/CSharpGame/CSharpGame.csproj
@@ -50,6 +50,12 @@
     <Compile Include="AppleView.cs" />
     <Compile Include="BaseObject.cs" />
     <Compile Include="Bullet.cs" />
+    <Compile Include="DataView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DataView.Designer.cs">
+      <DependentUpon>DataView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Enums.cs" />
     <Compile Include="Collisions.cs" />
     <Compile Include="GameSettings.cs" />
@@ -70,6 +76,9 @@
     <Compile Include="Tank.cs" />
     <Compile Include="TankView.cs" />
     <Compile Include="test.cs" />
+    <EmbeddedResource Include="DataView.resx">
+      <DependentUpon>DataView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainScreen.resx">
       <DependentUpon>MainScreen.cs</DependentUpon>
     </EmbeddedResource>
